search wrap bug

--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,52 +1,60 @@
 .form-check-label {
-  font-size: 15px;
-  color: white;
-}
-
-.search-and-select {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-mat-form-field {
-  width: 100% !important;
-  height: 70px;
-}
-
-.form-select {
-  width: 100px;
-}
-
-.custom-navbar {
-  background-color: var(--custom-nav-color, inherit);
-}
-
-.normal-button {
-  background-color: black;
-  display: inline-block;
-  padding: 10px 20px;
-  color: white;
-  text-decoration: none;
-  border-radius: 5px;
-}
-
-@media (max-width: 1000px) {
-  .navbar-nav {
-    flex-direction: row;
-  }
-
-  .navbar-nav .nav-item {
-    margin-bottom: 0.5rem;
-  }
-
-  .year-select,
-  .form-control {
-    width: 100%;
-  }
-
-  .mobile-button {
-    background-color: black;
+    font-size: 15px;
     color: white;
   }
-}
+
+  .search-and-select {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .search-select-height {
+    /* search and select weren't the same size and it bugged me */
+    height: 40px;
+  }
+
+  mat-form-field {
+    width: 100% !important;
+    height: 70px;
+  }
+
+  .form-select {
+    width: 100px;
+  }
+
+  .custom-navbar {
+    background-color: var(--custom-nav-color, inherit);
+  }
+
+  .normal-button {
+    background-color: black;
+    display: inline-block;
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+
+  @media (max-width: 1000px) {
+    .navbar-nav {
+      flex-direction: row;
+    }
+
+    .navbar-nav .nav-item {
+      margin-bottom: 0.5rem;
+    }
+
+    .year-select,
+    .form-control {
+      width: 100%;
+    }
+
+    .mobile-button {
+      background-color: black;
+      color: white;
+    }
+
+    .search-and-select {
+    }
+  }
